--- a/index.html
+++ b/index.html
@@ -1,68 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music of the Spheres</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" defer></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Music of the Spheres</title>
+<link href="https://fonts.googleapis.com/css2?family=Cardo&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css">
+<script defer src="js/main.js"></script>
 </head>
 <body>
-<header>
-    <nav class="navbar">
-        <div class="nav-title"><a href="index.html">Music of the Spheres</a></div>
-        <ul class="nav-links">
-            <li class="dropdown"><button>Harmonics & Intonation</button>
-                <ul class="dropdown-content">
-                    <li><a href="harmonics/harmonic-series.html">The Harmonic Series</a></li>
-                    <li><a href="harmonics/working-with-harmonics.html">Working with the Harmonics</a></li>
-                    <li><a href="harmonics/just-intonation.html">Just Intonation Systems</a></li>
-                    <li><a href="harmonics/pythagorean-tuning.html">Pythagorean Tuning</a></li>
-                    <li><a href="harmonics/equal-temperament.html">Equal Temperament</a></li>
-                </ul>
-            </li>
-            <li class="dropdown"><button>Music Theory</button>
-                <ul class="dropdown-content">
-                    <li><a href="music-theory/musical-notes.html">Musical Notes</a></li>
-                    <li><a href="music-theory/intervals.html">Intervals</a></li>
-                    <li><a href="music-theory/chords.html">Chords</a></li>
-                    <li><a href="music-theory/scales.html">Scales</a></li>
-                    <li><a href="music-theory/modes.html">Modes</a></li>
-                    <li><a href="music-theory/progression.html">Progression</a></li>
-                </ul>
-            </li>
-            <li class="dropdown"><button>Music of the Spheres</button>
-                <ul class="dropdown-content">
-                    <li><a href="music-of-the-spheres/planets-and-days.html">Planets & Days</a></li>
-                    <li><a href="music-of-the-spheres/major-scale-gregorian.html">Major Scale & Calendar</a></li>
-                    <li><a href="music-of-the-spheres/planetary-cypher.html">Planetary Cypher</a></li>
-                    <li><a href="music-of-the-spheres/metonic-cycle.html">Metonic Cycle</a></li>
-                    <li><a href="music-of-the-spheres/orbital-resonance.html">Orbital Resonance</a></li>
-                    <li><a href="music-of-the-spheres/correspondences.html">Correspondences</a></li>
-                </ul>
-            </li>
-            <li><a href="mode-wheel/index.html">Mode Wheel</a></li>
-            <li><a href="contact/index.html">Contact</a></li>
-            <li><a href="store/index.html">Store</a></li>
-        </ul>
+  <div class="stars"></div>
+  <div class="content">
+    <h1 class="title">Music of the Spheres</h1>
+    <nav class="nav">
+      <a href="pages/chronicles.html">Chronicles</a>
+      <a href="pages/visions.html">Visions</a>
+      <a href="pages/treatises.html">Treatises</a>
+      <a href="pages/codex.html">Codex</a>
     </nav>
-</header>
-<main>
-<section class="hero">
-    <img src="images/sample-cosmos.jpg" alt="Celestial Diagram" class="hero-img">
-    <div class="hero-text">
-        <h1>Music of the Spheres</h1>
-        <p>Exploring the relationships between harmony, mathematics, and the cosmos. This project seeks to illuminate how the ancient and modern understandings of sound reflect the deeper order of the universe.</p>
-    </div>
-</section>
-<section class="links">
-    <div class="link-card"><a href="harmonics/harmonic-series.html">Harmonics & Intonation</a></div>
-    <div class="link-card"><a href="music-theory/musical-notes.html">Music Theory</a></div>
-    <div class="link-card"><a href="music-of-the-spheres/planets-and-days.html">Music of the Spheres</a></div>
-</section>
-</main>
-<footer>
-    <p>&copy; 2025 Music of the Spheres</p>
-</footer>
+    <p class="intro">
+      “Amidst the silent heavens, every soul becomes a note — together forming the unseen harmony that shapes all worlds.”
+    </p>
+  </div>
 </body>
 </html>
