--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Music of the Spheres</title>
+<link href="https://fonts.googleapis.com/css2?family=Cardo&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css">
+<script defer src="js/main.js"></script>
+</head>
+<body>
+  <div class="stars"></div>
+  <div class="content">
+    <h1 class="title">Music of the Spheres</h1>
+    <nav class="nav">
+      <a href="pages/chronicles.html">Chronicles</a>
+      <a href="pages/visions.html">Visions</a>
+      <a href="pages/treatises.html">Treatises</a>
+      <a href="pages/codex.html">Codex</a>
+    </nav>
+    <p class="intro">
+      “Amidst the silent heavens, every soul becomes a note — together forming the unseen harmony that shapes all worlds.”
+    </p>
+  </div>
+</body>
+</html>
